@@ -149,6 +149,9 @@ present).
 Extension Modules
 -----------------
 
+- Patch #1288833: Removed thread lock from socket.getaddrinfo on
+  FreeBSD 5.3 and later versions which got thread-safe getaddrinfo(3).
+
 - Patches #1298449 and #1298499: Add some missing checks for error
   returns in cStringIO.c.
 
